clusters/hub/components/gateway-api-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: gateway-api-test
    argocd.argoproj.io/managed-by: openshift-gitops
  name: gateway-api-test
