clusters/hub/components/gateway-api-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-echo-headers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-echo-headers
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: nginx-echo-headers
        version: v1
    spec:
      containers:
      - image: brndnmtthws/nginx-echo-headers
        imagePullPolicy: IfNotPresent
        name: nginx-echo-headers
        ports:
        - containerPort: 8080
