clusters/hub/components/gateway-api-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-echo-headers
  labels:
    app: nginx-echo-headers
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: nginx-echo-headers
