clusters/hub/components/gateway-api-test/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nginx-echo-headers
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: main
    namespace: openshift-ingress
  hostnames: ["nginx-echo-headers.gwapi.${CLUSTER_BASE_DOMAIN}"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: nginx-echo-headers
        port: 8080
        weight: 1	
    matches:	
      - path:	
          type: PathPrefix	
          value: /
